# implotjs

./: .gitignore  AGENTS.md  CMakeLists.txt  DISCREPANCIES.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  package.json  tsconfig.json
.github/workflows/: release.yml
examples/: basic.html
scripts/: build-wasm.sh  generate-readme.ts  package-smoke-test.sh  release.js  start-test-server.sh
src/: implotjs.js  index.ts
src/native/: main.cpp
test/: index.html  package.json  smoke.ts
